--- a/.github/workflows/build-beta.yml
+++ b/.github/workflows/build-beta.yml
@@ -2,18 +2,23 @@ name: build-beta
 
 on:
   push:
-    branches: [ beta ]
+    branches:
+      - beta
   pull_request:
-    branches: [ beta ]
+    branches:
+      - beta
 
 jobs:
   build:
-
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - uses: actions/checkout@v3
+      - name: Set up Swift
+        uses: fwal/setup-swift@v2
+        with:
+          swift-version: "6.0"
+      - name: Build
+        run: swift build -v
+      - name: Run tests
+        run: swift test -v
