--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -14,10 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Swift
-        uses: fwal/setup-swift@v2
+      - uses: swift-actions/setup-swift@v2.1.0
         with:
-          swift-version: "6.0"
+          swift-version: "6.0.2"
       - name: Build
         run: swift build -v
       - name: Run tests
