--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -14,9 +14,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: swift-actions/setup-swift@v2.1.0
+      - uses: JoelBCarter/setup-swift@feat/swift-6
         with:
-          swift-version: "6"
+          swift-version: "6.0"
       - name: Build
         run: swift build -v
       - name: Run tests
