Default to localhost for local dev

--- a/.swiftpm/xcode/xcshareddata/xcschemes/XyoClient.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/XyoClient.xcscheme
@@ -55,7 +55,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "XYO_API_DOMAIN"
-            value = "https://beta.api.archivist.xyo.network"
+            value = "http://localhost:8080"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
