--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Alamofire", "keccak", "secp", "unkeyed"]
+  "cSpell.words": ["Alamofire", "keccak", "Protobuf", "secp", "unkeyed"]
 }
