--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Alamofire", "keccak", "Protobuf", "secp", "unkeyed"]
+  "cSpell.words": [
+    "Alamofire",
+    "boundwitness",
+    "keccak",
+    "Protobuf",
+    "secp",
+    "unkeyed"
+  ]
 }
