--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
     "Alamofire",
+    "Arie",
     "boundwitness",
     "keccak",
     "Keychain",
     "Protobuf",
     "secp",
+    "Trouw",
     "unkeyed"
   ]
 }
